# DeusExEchelonRenderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cicd_build_package_release.yml  main.yml
BUILD_WIN32/: build.bat
INCLUDE/: d3dxGlobal.h
INCLUDE/deusex/ConSys/Inc/: ConCamera.h  ConChoice.h
INCLUDE/deusex/Core/Inc/: Core.h  DbgInfoCpp.h  FCodec.h  FConfigCacheIni.h  FFeedbackContextAnsi.h  FFeedbackContextWindows.h  FFileManagerAnsi.h  FFileManagerGeneric.h  FFileManagerLinux.h  FFileManagerWindows.h  FMallocWindows.h  FOutputDeviceFile.h  FOutputDeviceWindowsError.h  SerialNumber.h  UDebugInfo.h  UExporter.h  UFactory.h  UnArc.h  UnBuild.h  UnCId.h  UnCache.h  UnClass.h  UnCorObj.h  UnCoreNet.h  UnFile.h  UnGnuG.h  UnMath.h  UnMem.h  UnName.h  UnNames.h  UnObjBas.h  UnObjVer.h  UnScript.h  UnStack.h  UnTemplate.h  UnType.h  UnUnix.h  UnVcWin32.h
INCLUDE/deusex/Core/Src/: CorePrivate.h  UnLinker.h
INCLUDE/deusex/D3DDrv/Src/: D3DDrv.h
INCLUDE/deusex/DeusEx/Inc/: AAugmentation.h  AAugmentationManager.h  ADeusExDecoration.h  ADeusExLevelInfo.h  ADeusExPlayer.h  AScriptedPawn.h  DeusEx.h  DeusExClasses.h  DeusExGameEngine.h  ExtGameDirectory.h  UDataVaultImageNote.h  UDeusExLog.h  UDeusExSaveInfo.h  UDumpLocation.h  ULaserIterator.h  UParticleIterator.h  uparticle.h
INCLUDE/deusex/DeusExText/Inc/: DeusExText.h  DeusExTextParser.h  TextImport.h
INCLUDE/deusex/Editor/Inc/: Editor.h  EditorClasses.h
INCLUDE/deusex/Editor/Src/: EditorPrivate.h  UnEdTran.h  UnScrCom.h  UnTopics.h
INCLUDE/deusex/Engine/Inc/: AActor.h  ABrush.h  ACamera.h  AGameReplicationInfo.h  AInventory.h  AMover.h  APawn.h  APlayerPawn.h  APlayerReplicationInfo.h  AZoneInfo.h  Engine.h  EngineClasses.h  Palette.h  S3tc.h  ULevelSummary.h  UnActor.h  UnAudio.h  UnBunch.h  UnCamera.h  UnChan.h  UnCon.h  UnConn.h  UnDemoPenLev.h  UnDemoRec.h  UnEngine.h  UnEngineWin.h  UnEventManager.h  UnGame.h  UnIn.h  UnLevel.h  UnMesh.h  UnModel.h  UnNet.h  UnNetDrv.h  UnObj.h  UnPenLev.h  UnPlayer.h  UnPrim.h  UnReach.h  UnRenDev.h  (+4 more)
INCLUDE/deusex/Engine/Src/: EnginePrivate.h  UnPath.h
INCLUDE/deusex/Extension/Inc/: ExtBorder.h  ExtButton.h  ExtCheckbox.h  ExtClipWindow.h  ExtComputerWindow.h  ExtEdit.h  ExtFlag.h  ExtFlagBase.h  ExtGC.h  ExtGameEngine.h  ExtInput.h  ExtLargeText.h  ExtList.h  ExtModal.h  ExtObject.h  ExtPlayerPawn.h  ExtRadioBox.h  ExtRoot.h  ExtScale.h  ExtScaleManager.h  ExtScrollArea.h  ExtString.h  ExtTabGroup.h  ExtText.h  ExtTextLog.h  ExtTile.h  ExtToggle.h  ExtViewport.h  ExtWindow.h  ExtWindowCore.h  Extension.h  ExtensionCore.h
INCLUDE/deusex/Fire/Src/: FractalPrivate.h
INCLUDE/deusex/Galaxy/Hdr/: GALAXY.H
INCLUDE/deusex/Galaxy/Src/: A3D.h  ia3dapi.h
INCLUDE/deusex/GlideDrv/Src/: FXIMG.H
INCLUDE/deusex/IpDrv/Inc/: AInternetLink.h  ATcpLink.h  AUdpLink.h  GameSpyClasses.h  GameSpyClassesPublic.h  IpDrvClasses.h
INCLUDE/deusex/IpDrv/Src/: IpDrvPrivate.h  UnSocket.h
INCLUDE/deusex/Launch/Src/: LaunchPrivate.h
INCLUDE/deusex/MetalDrv/Src/: Metal.h
INCLUDE/deusex/OpenGLDrv/Src/: OpenGlDrv.h  OpenGlFuncs.h
INCLUDE/deusex/Render/Src/: UnSpan.h  (+2 more)
LIB/: D3DX11Effects.lib  _D3DX11Effects.lib
Source/: CMakeLists.txt  DeusExEchelonRenderer.aps  DeusExEchelonRenderer.ini  DeusExEchelonRenderer.int  DeusExEchelonRenderer.rc  DeusExEchelonRenderer_PCH.h  ForceLinkerReferences.cxx  rtx.conf  title.dds  uefacade.cpp  uefacade.h
Source/Core/: CMakeLists.txt  DeusExEchelonCore.cpp  DeusExEchelonCore.h  DeusExEchelonCore_PCH.h  commandmanager.cpp  commandmanager.h  coreutils.cpp  coreutils.h  demomanager.cpp  demomanager.h
Source/Core/hooks/: hooks.cpp  hooks.h  uengine.cpp
Source/Renderer/: CMakeLists.txt  DeusExEchelonRenderer.ini  DeusExEchelonRenderer_PCH.h  ForceLinkerReferences.cxx  resource.h  rtx.conf  uefacade.cpp  uefacade.h
Source/Renderer/hacks/: aplayerpawn.cpp  bytepatches.cpp  fdynamicitemfilter.cpp  fdynamicsprite.cpp  fscenenode.cpp  fspanbuffer.cpp  hacks.h  misc.cpp  misc.h  uconsole.cpp  uengine.cpp  umesh.cpp  urender.cpp  warningscreen.inc  xviewportwindow.cpp
Source/Renderer/rendering/: dxtexture.cpp  dxtexture.h  dxtexturemanager.cpp  dxtexturemanager.h  hlrenderer.cpp  hlrenderer.h  lightmanager.cpp  lightmanager.h  llrenderer.cpp  llrenderer.h  scenemanager.cpp  scenemanager.h
Source/Renderer/utils/: configmanager.cpp  configmanager.h  debugmenu.cpp  materialdebugger.cpp  materialdebugger.h  utils.cpp  utils.h
Source/WindowDrv/: CMakeLists.txt  DeusExEchelonRendererWindowDrv.int  DeusExEchelonRendererWindowDrv.rc  DeusExEchelonRendererWindowDrv_PCH.h  RCa24072  WindowsClient.cpp  WindowsClient.h  WindowsViewport.cpp  WindowsViewport.h  uefacade.cpp
Source/hacks/: bytepatches.cpp  fdynamicitemfilter.cpp  fdynamicsprite.cpp  fscenenode.cpp  fspanbuffer.cpp  hacks.h  misc.cpp  misc.h  rtxconf.cpp  threadaffinity.cpp  uconsole.cpp  uengine.cpp  ulightmanager.cpp  umesh.cpp  urender.cpp
Source/rendering/: dxtexture.cpp  dxtexture.h  dxtexturemanager.cpp  dxtexturemanager.h  hlrenderer.cpp  hlrenderer.h  lightmanager.cpp  lightmanager.h  llrenderer.cpp  llrenderer.h
Source/utils/: commandmanager.cpp  commandmanager.h  configmanager.cpp  configmanager.h  debugmenu.cpp  debugmenu.h  demomanager.cpp  materialdebugger.cpp  materialdebugger.h  memory.cpp  utils.cpp  utils.h
TOOLS/ingestionhelper/: CMakeLists.txt  IngestionHelper_PCH.h
TOOLS/ingestionhelper/Source/: ingestionhelper.cpp  ingestionhelper.h  main.cpp  utils.cpp  utils.h
TOOLS/omniversehelper/: cmd_copy.go  cmd_mass_ingest.go  go.mod  go.sum  main.go  process.go  rest.txt
TOOLS/omniversehelper/data/: enums.go  texture.go
TOOLS/omniversehelper/internal/: restclient.go  restclient_assets.go  restclient_layers.go  restclient_textures.go  restclient_textures_types.go  types.go
TOOLS/omniversehelper/utils/: batcher.go  io.go  params.go  slices.go
TOOLS/screenshotcomparison/: go.mod  index.template.html  main.go
TOOLS/screenshotcomparison/util/: util.go
(+31 files in other folders)
